# OpenWeedLocator-rust

./: README.md  pyproject.toml
.github/workflows/: build.yml
config/: rust-migration.yml
docker/: Dockerfile.production
docs/: hybrid_architecture.md  opencv_build.md
rust-core/: Cargo.toml
rust-core/owl-detection/: Cargo.toml
rust-core/owl-detection/src/: lib.rs
rust-core/owl-hardware/: Cargo.toml
rust-core/owl-hardware/src/: lib.rs
rust-core/owl-vision/: Cargo.toml
rust-core/owl-vision/src/: lib.rs
rust-core/python-bindings/: Cargo.toml  build.rs
rust-core/python-bindings/src/: lib.rs
scripts/: easy-install.sh
tests/: test_rust_integration.py
utils/: greenonbrown.py
